--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+  font-family: sans-serif;
+  width: 600px;
+  margin: auto;
+}
+.heading {
+  text-align: center;
+}
+.reset-order {
+  text-align: right;
+  margin-bottom: 20px;
+}
+table {
+  border-collapse: collapse;
+  width: 600px;
+  margin: auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+th {
+  width: 150px;
+  border: 1px solid #999;
+}
+
+td {
+  border: 1pt solid #999;
+  padding: 5px;
+}
+.row-red {
+  color: orange;
+}
+
+.row-blue {
+  color: blue;
+}
+
+.row-green {
+  color: green;
+}
+
+.btn {
+  background-color: #339cbe;
+  color: white;
+  border: 1px solid #339cbe;
+  border-radius: 5px;
+  padding: 7px;
+  margin: 5px 0px 5px 15px;
+}
+
+@media only screen and (max-width: 600px) {
+  .App {
+    width: 360px;
+    margin: auto;
+  }
+  table {
+    width: 360px;
+    margin: auto;
+  }
 }
